--- a/css/style.css
+++ b/css/style.css
@@ -1038,7 +1038,7 @@ a.article-title:hover {
   color: #ddd;
 }
 #footer {
-  background: #262a30;
+  background: color-footer-background;
   padding: 50px 0;
   border-top: 1px solid #ddd;
   color: #999;
